# F1PyStats-Draft

./: .gitignore  README.md  pyproject.toml
f1pystats/: __init__.py  f1pystats.py
tests/: test_pit_stops.py
