[tool.poetry]
name = "f1pystats"
version = "0.1.1"
description = ""
authors = ["youpong <youpong@cpan.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
